// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTourStep can be inactive 1`] = `
<span>
  Test
</span>
`;

exports[`EuiTourStep is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorLeftUp euiPopover--withTitle"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;
